--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,18 @@
     "prepare": "husky",
     "precommit": "eslint ."
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint — fix",
+      "prettier — write",
+      "git add"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
