--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
-POSTGRES_SUPABASE_URL="postgres://postgres.ossftsehtvayecbnwsdf:z2%u@iZp9JcHSL!@aws-0-us-east-1.pooler.supabase.com:6543/postgres"
+# Connect to Supabase via connection pooling with Supavisor.
+DATABASE_URL="postgres://postgres.ossftsehtvayecbnwsdf:z2%u@iZp9JcHSL!@aws-0-us-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+
+# Direct connection to the database. Used for migrations.
+DIRECT_URL="postgres://postgres.ossftsehtvayecbnwsdf:z2%u@iZp9JcHSL!@aws-0-us-east-1.pooler.supabase.com:5432/postgres"
+        
