--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "globals": "^15.6.0",
     "husky": "^9.0.11",
     "prettier": "3.3.2",
+    "prisma": "^5.15.1",
     "typescript-eslint": "^7.13.1"
   }
 }
