--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon",
     "prepare": "husky",
     "precommit": "eslint ."
   },
@@ -30,13 +30,17 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@types/express": "^4.17.21",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.6.0",
     "husky": "^9.0.11",
+    "nodemon": "^3.1.4",
     "prettier": "3.3.2",
     "prisma": "^5.15.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1"
   }
 }
