--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.15.1",
+    "@types/dotenv": "^8.2.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "express": "^4.19.2"
