--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
+    "sass": "^1.77.6",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
   }
