--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon",
     "prepare": "husky",
     "precommit": "eslint ."
   },
@@ -24,18 +24,38 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.15.1",
+    "@types/cookie-parser": "^1.4.7",
+    "bcryptjs": "^2.4.3",
+    "chalk": "^4.1.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.6.0",
     "husky": "^9.0.11",
+    "nodemon": "^3.1.4",
     "prettier": "3.3.2",
+    "prisma": "^5.15.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1"
   }
 }
