--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
@@ -56,12 +58,8 @@
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
-<<<<<<< HEAD
-    "vite": "^5.3.1"
-=======
     "sass": "^1.77.6",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
->>>>>>> origin/main
   }
 }
