--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.52.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
+    "react-slideshow-image": "^4.3.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
